--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="style.scss">
   <title>Tavern Tales</title>
 </head>
 
 <body>
+  <div id="app"></div>
   <script src="index.js"></script>
 </body>
 
